parser.output
Terminals unused in grammar

   ARROW
   TERNARY
   CHAIN
   PIPELINE
   SPREAD
   CASE
   CATCH
   DEBUGGER
   DEFAULT
   DELETE
   ENUM
   EXPORT
   EXTENDS
   FINALLY
   IMPLEMENTS
   IMPORT
   IN
   INSTANCEOF
   INTERFACE
   PACKAGE
   SUPER
   SWITCH
   THIS
   THROW
   TRY
   TYPEOF
   WITH
   AWAIT
   YIELD
   STATIC
   AS
   ASYNC
   FROM
   GET
   OF
   SET
   TARGET
   CONSTRUCTOR
   DECLARE
   MODULE
   REQUIRE
   SYMBOL
   TYPE


Grammar

    0 $accept: line $end

    1 line: stmt-list
    2     | %empty

    3 stmt-list: stmt-list stmt
    4          | stmt

    5 stmt: var-declr SEMI
    6     | func-def
    7     | class-def
    8     | expr SEMI
    9     | assign-expr SEMI
   10     | if-stmt
   11     | while-stmt
   12     | do-while-stmt
   13     | for-stmt
   14     | RETURN SEMI
   15     | RETURN expr SEMI
   16     | BREAK SEMI
   17     | CONTINUE SEMI

   18 assign-expr: var-att assignment expr
   19            | ID assignment expr
   20            | vet-idx assignment expr

   21 for-stmt: FOR LPAR assign-expr SEMI expr SEMI expr RPAR LBRACE line RBRACE
   22         | FOR LPAR assign-expr SEMI expr SEMI assign-expr RPAR LBRACE line RBRACE
   23         | FOR LPAR assign-expr SEMI expr SEMI RPAR LBRACE line RBRACE
   24         | FOR LPAR assign-expr SEMI SEMI expr RPAR LBRACE line RBRACE
   25         | FOR LPAR assign-expr SEMI SEMI assign-expr RPAR LBRACE line RBRACE
   26         | FOR LPAR assign-expr SEMI SEMI RPAR LBRACE line RBRACE
   27         | FOR LPAR var-declr SEMI expr SEMI expr RPAR LBRACE line RBRACE
   28         | FOR LPAR var-declr SEMI expr SEMI assign-expr RPAR LBRACE line RBRACE
   29         | FOR LPAR var-declr SEMI expr SEMI RPAR LBRACE line RBRACE
   30         | FOR LPAR var-declr SEMI SEMI expr RPAR LBRACE line RBRACE
   31         | FOR LPAR var-declr SEMI SEMI assign-expr RPAR LBRACE line RBRACE
   32         | FOR LPAR var-declr SEMI SEMI RPAR LBRACE line RBRACE
   33         | FOR LPAR SEMI expr SEMI expr RPAR LBRACE line RBRACE
   34         | FOR LPAR SEMI expr SEMI assign-expr RPAR LBRACE line RBRACE
   35         | FOR LPAR SEMI expr SEMI RPAR LBRACE line RBRACE
   36         | FOR LPAR SEMI SEMI expr RPAR LBRACE line RBRACE
   37         | FOR LPAR SEMI SEMI assign-expr RPAR LBRACE line RBRACE
   38         | FOR LPAR SEMI SEMI RPAR LBRACE line RBRACE

   39 assignment: ASSIGN
   40           | LOGICAL_NULL_ASSIGN
   41           | LOGICAL_AND_ASSIGN
   42           | LOGICAL_OR_ASSIGN
   43           | PLUS_ASSIGN
   44           | SUB_ASSIGN
   45           | MULT_ASSIGN
   46           | DIV_ASSIGN
   47           | EXP_ASSIGN
   48           | REM_ASSIGN
   49           | BITWISE_AND_ASSIGN
   50           | BITWISE_OR_ASSIGN
   51           | BITWISE_XOR_ASSIGN
   52           | LSHIFT_ASSIGN
   53           | RSHIFT_ASSIGN
   54           | RSHIFT_UNSIGNED_ASSIGN

   55 do-while-stmt: DO LBRACE line RBRACE WHILE LPAR expr RPAR
   56              | DO LBRACE line RBRACE WHILE LPAR assign-expr RPAR

   57 while-stmt: WHILE LPAR expr RPAR LBRACE line RBRACE
   58           | WHILE LPAR assign-expr RPAR LBRACE line RBRACE

   59 if-stmt: IF LPAR expr RPAR LBRACE line RBRACE
   60        | IF LPAR expr RPAR LBRACE line RBRACE ELSE LBRACE line RBRACE
   61        | IF LPAR expr RPAR LBRACE line RBRACE ELSE stmt
   62        | IF LPAR assign-expr RPAR LBRACE line RBRACE
   63        | IF LPAR assign-expr RPAR LBRACE line RBRACE ELSE LBRACE line RBRACE
   64        | IF LPAR assign-expr RPAR LBRACE line RBRACE ELSE stmt

   65 logic-expr: expr EQ expr
   66           | expr EQ_STRICT expr
   67           | expr INEQ expr
   68           | expr INEQ_STRICT expr
   69           | expr LT expr
   70           | ID LT expr
   71           | expr LT_EQ expr
   72           | expr GT expr
   73           | expr GT_EQ expr
   74           | expr LOGICAL_NULL expr
   75           | expr LOGICAL_AND expr
   76           | expr LOGICAL_OR expr

   77 class-def: CLASS ID LBRACE class-att-list RBRACE

   78 class-att-list: SEMI class-att-list
   79               | class-att SEMI class-att-list
   80               | class-att
   81               | %empty

   82 class-att: ID COLON var-type
   83          | access-modif ID COLON var-type
   84          | ID LPAR params RPAR LBRACE line RBRACE
   85          | ID LPAR params RPAR COLON var-type LBRACE line RBRACE

   86 access-modif: PUBLIC
   87             | PRIVATE
   88             | PROTECTED

   89 func-def: FUNCTION ID LPAR params RPAR LBRACE line RBRACE
   90         | FUNCTION ID LPAR params RPAR COLON var-type LBRACE line RBRACE

   91 params: COMMA ID
   92       | COMMA ID COLON var-type
   93       | ID COMMA ID
   94       | ID COLON var-type COMMA ID COLON var-type
   95       | ID COLON var-type COMMA ID
   96       | ID COLON var-type
   97       | ID COMMA ID COLON var-type
   98       | %empty

   99 var-declr: LET id-list
  100          | LET id-list ASSIGN expr
  101          | LET id-list ASSIGN obj-def
  102          | LET ID COLON var-type
  103          | LET ID COLON var-type ASSIGN expr
  104          | LET ID COLON var-type LBRACKET RBRACKET
  105          | LET ID COLON var-type LBRACKET RBRACKET ASSIGN expr
  106          | VAR id-list
  107          | VAR id-list ASSIGN expr
  108          | VAR id-list ASSIGN obj-def
  109          | VAR ID COLON var-type
  110          | VAR ID COLON var-type ASSIGN expr
  111          | VAR ID COLON var-type LBRACKET RBRACKET
  112          | VAR ID COLON var-type LBRACKET RBRACKET ASSIGN expr
  113          | CONST_RW id-list ASSIGN expr
  114          | CONST_RW ID COLON var-type ASSIGN expr
  115          | CONST_RW ID COLON var-type LBRACKET RBRACKET ASSIGN expr
  116          | CONST_RW id-list ASSIGN obj-def

  117 id-list: ID COMMA id-list
  118        | ID

  119 obj-def: LBRACE obj-att-list RBRACE

  120 obj-att-list: COMMA obj-att-list
  121             | obj-att COMMA obj-att-list
  122             | obj-att
  123             | %empty

  124 obj-att: ID COLON var-val

  125 var-type: NUMBER
  126         | STRING
  127         | UNKNOWN
  128         | BOOLTYPE
  129         | ANY
  130         | VOID_RW
  131         | NEVER

  132 expr: idx-safe-expr
  133     | idx-unsafe-expr
  134     | LPAR expr RPAR

  135 idx-unsafe-expr: array-expr
  136                | logic-expr
  137                | var-obj

  138 idx-safe-expr: var-val
  139              | var-att
  140              | arit-expr
  141              | bitw-expr
  142              | shift-expr
  143              | unary-expr
  144              | vet-idx
  145              | ID

  146 vet-idx: ID LBRACKET idx-safe-expr RBRACKET

  147 unary-expr: INCREMENT ID
  148           | INCREMENT var-att
  149           | DECREMENT ID
  150           | DECREMENT var-att
  151           | ID INCREMENT
  152           | var-att INCREMENT
  153           | ID DECREMENT
  154           | var-att DECREMENT
  155           | LOGICAL_NOT expr
  156           | BITWISE_NOT expr

  157 arit-expr: expr PLUS expr
  158          | expr SUB expr
  159          | expr MULT expr
  160          | expr DIV expr
  161          | expr EXP expr
  162          | expr REM expr

  163 bitw-expr: expr BITWISE_AND expr
  164          | expr BITWISE_OR expr
  165          | expr BITWISE_XOR expr

  166 shift-expr: expr LSHIFT expr
  167           | expr RSHIFT expr
  168           | expr RSHIFT_UNSIGNED expr

  169 var-att: ID DOT var-att
  170        | var-att DOT ID
  171        | ID DOT var-met
  172        | var-met DOT ID
  173        | var-met DOT var-att
  174        | var-att DOT var-met
  175        | ID DOT ID

  176 var-met: ID LPAR args-list RPAR

  177 args-list: COMMA args-list
  178          | expr COMMA args-list
  179          | assign-expr COMMA args-list
  180          | expr
  181          | assign-expr
  182          | %empty

  183 var-obj: ID LPAR args-list RPAR
  184        | ID LT var-type GT LPAR args-list RPAR
  185        | NEW ID LPAR args-list RPAR
  186        | NEW ID LT var-type GT LPAR args-list RPAR

  187 var-val: INT_VAL
  188        | REAL_VAL
  189        | STR_VAL
  190        | TRUE_RW
  191        | FALSE_RW
  192        | SUB INT_VAL
  193        | SUB REAL_VAL
  194        | SUB STR_VAL
  195        | SUB TRUE_RW
  196        | SUB FALSE_RW
  197        | NULL_RW
  198        | UNDEFINED

  199 array-expr: LBRACKET elmts-list RBRACKET

  200 elmts-list: COMMA elmts-list
  201           | var-val COMMA elmts-list
  202           | var-val
  203           | %empty


Terminals, with rules where they appear

$end (0) 0
error (256)
ASSIGN (258) 39 100 101 103 105 107 108 110 112 113 114 115 116
ARROW (259)
COMMA (260) 91 92 93 94 95 97 117 120 121 177 178 179 200 201
SEMI (261) 5 8 9 14 15 16 17 21 22 23 24 25 26 27 28 29 30 31 32 33
    34 35 36 37 38 78 79
COLON (262) 82 83 85 90 92 94 95 96 97 102 103 104 105 109 110 111
    112 114 115 124
TERNARY (263)
CHAIN (264)
PIPELINE (265)
DOT (266) 169 170 171 172 173 174 175
SPREAD (267)
PLUS (268) 157
INCREMENT (269) 147 148 151 152
PLUS_ASSIGN (270) 43
SUB (271) 158 192 193 194 195 196
DECREMENT (272) 149 150 153 154
SUB_ASSIGN (273) 44
MULT (274) 159
MULT_ASSIGN (275) 45
DIV (276) 160
DIV_ASSIGN (277) 46
EXP (278) 161
EXP_ASSIGN (279) 47
REM (280) 162
REM_ASSIGN (281) 48
BITWISE_NOT (282) 156
BITWISE_AND (283) 163
BITWISE_AND_ASSIGN (284) 49
BITWISE_OR (285) 164
BITWISE_OR_ASSIGN (286) 50
BITWISE_XOR (287) 165
BITWISE_XOR_ASSIGN (288) 51
LOGICAL_NOT (289) 155
LOGICAL_NULL (290) 74
LOGICAL_NULL_ASSIGN (291) 40
LOGICAL_AND (292) 75
LOGICAL_AND_ASSIGN (293) 41
LOGICAL_OR (294) 76
LOGICAL_OR_ASSIGN (295) 42
EQ (296) 65
EQ_STRICT (297) 66
INEQ (298) 67
INEQ_STRICT (299) 68
LT (300) 69 70 184 186
LT_EQ (301) 71
GT (302) 72 184 186
GT_EQ (303) 73
LSHIFT (304) 166
LSHIFT_ASSIGN (305) 52
RSHIFT (306) 167
RSHIFT_ASSIGN (307) 53
RSHIFT_UNSIGNED (308) 168
RSHIFT_UNSIGNED_ASSIGN (309) 54
LPAR (310) 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 55
    56 57 58 59 60 61 62 63 64 84 85 89 90 134 176 183 184 185 186
RPAR (311) 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 55
    56 57 58 59 60 61 62 63 64 84 85 89 90 134 176 183 184 185 186
LBRACE (312) 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38
    55 56 57 58 59 60 61 62 63 64 77 84 85 89 90 119
RBRACE (313) 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38
    55 56 57 58 59 60 61 62 63 64 77 84 85 89 90 119
LBRACKET (314) 104 105 111 112 115 146 199
RBRACKET (315) 104 105 111 112 115 146 199
INT_VAL (316) 187 192
REAL_VAL (317) 188 193
STR_VAL (318) 189 194
ID (319) 19 70 77 82 83 84 85 89 90 91 92 93 94 95 96 97 102 103 104
    105 109 110 111 112 114 115 117 118 124 145 146 147 149 151 153
    169 170 171 172 175 176 183 184 185 186
BREAK (320) 16
CASE (321)
CATCH (322)
CLASS (323) 77
CONST_RW (324) 113 114 115 116
CONTINUE (325) 17
DEBUGGER (326)
DEFAULT (327)
DELETE (328)
DO (329) 55 56
ELSE (330) 60 61 63 64
ENUM (331)
EXPORT (332)
EXTENDS (333)
FALSE_RW (334) 191 196
FINALLY (335)
FOR (336) 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38
FUNCTION (337) 89 90
IF (338) 59 60 61 62 63 64
IMPLEMENTS (339)
IMPORT (340)
IN (341)
INSTANCEOF (342)
INTERFACE (343)
LET (344) 99 100 101 102 103 104 105
NEW (345) 185 186
NULL_RW (346) 197
PACKAGE (347)
PRIVATE (348) 87
PROTECTED (349) 88
PUBLIC (350) 86
RETURN (351) 14 15
SUPER (352)
SWITCH (353)
THIS (354)
THROW (355)
TRUE_RW (356) 190 195
TRY (357)
TYPEOF (358)
VAR (359) 106 107 108 109 110 111 112
VOID_RW (360) 130
WHILE (361) 55 56 57 58
WITH (362)
AWAIT (363)
YIELD (364)
STATIC (365)
AS (366)
ASYNC (367)
FROM (368)
GET (369)
OF (370)
SET (371)
TARGET (372)
ANY (373) 129
BOOLTYPE (374) 128
CONSTRUCTOR (375)
DECLARE (376)
MODULE (377)
REQUIRE (378)
NEVER (379) 131
NUMBER (380) 125
STRING (381) 126
SYMBOL (382)
TYPE (383)
UNDEFINED (384) 198
UNKNOWN (385) 127
E_ID (386)


Nonterminals, with rules where they appear

$accept (132)
    on left: 0
line (133)
    on left: 1 2, on right: 0 21 22 23 24 25 26 27 28 29 30 31 32 33
    34 35 36 37 38 55 56 57 58 59 60 61 62 63 64 84 85 89 90
stmt-list (134)
    on left: 3 4, on right: 1 3
stmt (135)
    on left: 5 6 7 8 9 10 11 12 13 14 15 16 17, on right: 3 4 61 64
assign-expr (136)
    on left: 18 19 20, on right: 9 21 22 23 24 25 26 28 31 34 37 56
    58 62 63 64 179 181
for-stmt (137)
    on left: 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38,
    on right: 13
assignment (138)
    on left: 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54, on right:
    18 19 20
do-while-stmt (139)
    on left: 55 56, on right: 12
while-stmt (140)
    on left: 57 58, on right: 11
if-stmt (141)
    on left: 59 60 61 62 63 64, on right: 10
logic-expr (142)
    on left: 65 66 67 68 69 70 71 72 73 74 75 76, on right: 136
class-def (143)
    on left: 77, on right: 7
class-att-list (144)
    on left: 78 79 80 81, on right: 77 78 79
class-att (145)
    on left: 82 83 84 85, on right: 79 80
access-modif (146)
    on left: 86 87 88, on right: 83
func-def (147)
    on left: 89 90, on right: 6
params (148)
    on left: 91 92 93 94 95 96 97 98, on right: 84 85 89 90
var-declr (149)
    on left: 99 100 101 102 103 104 105 106 107 108 109 110 111 112
    113 114 115 116, on right: 5 27 28 29 30 31 32
id-list (150)
    on left: 117 118, on right: 99 100 101 106 107 108 113 116 117
obj-def (151)
    on left: 119, on right: 101 108 116
obj-att-list (152)
    on left: 120 121 122 123, on right: 119 120 121
obj-att (153)
    on left: 124, on right: 121 122
var-type (154)
    on left: 125 126 127 128 129 130 131, on right: 82 83 85 90 92
    94 95 96 97 102 103 104 105 109 110 111 112 114 115 184 186
expr (155)
    on left: 132 133 134, on right: 8 15 18 19 20 21 22 23 24 27 28
    29 30 33 34 35 36 55 57 59 60 61 65 66 67 68 69 70 71 72 73 74
    75 76 100 103 105 107 110 112 113 114 115 134 155 156 157 158 159
    160 161 162 163 164 165 166 167 168 178 180
idx-unsafe-expr (156)
    on left: 135 136 137, on right: 133
idx-safe-expr (157)
    on left: 138 139 140 141 142 143 144 145, on right: 132 146
vet-idx (158)
    on left: 146, on right: 20 144
unary-expr (159)
    on left: 147 148 149 150 151 152 153 154 155 156, on right: 143
arit-expr (160)
    on left: 157 158 159 160 161 162, on right: 140
bitw-expr (161)
    on left: 163 164 165, on right: 141
shift-expr (162)
    on left: 166 167 168, on right: 142
var-att (163)
    on left: 169 170 171 172 173 174 175, on right: 18 139 148 150
    152 154 169 170 173 174
var-met (164)
    on left: 176, on right: 171 172 173 174
args-list (165)
    on left: 177 178 179 180 181 182, on right: 176 177 178 179 183
    184 185 186
var-obj (166)
    on left: 183 184 185 186, on right: 137
var-val (167)
    on left: 187 188 189 190 191 192 193 194 195 196 197 198, on right:
    124 138 201 202
array-expr (168)
    on left: 199, on right: 135
elmts-list (169)
    on left: 200 201 202 203, on right: 199 200 201


State 0

    0 $accept: . line $end

    INCREMENT    shift, and go to state 1
    SUB          shift, and go to state 2
    DECREMENT    shift, and go to state 3
    BITWISE_NOT  shift, and go to state 4
    LOGICAL_NOT  shift, and go to state 5
    LPAR         shift, and go to state 6
    LBRACKET     shift, and go to state 7
    INT_VAL      shift, and go to state 8
    REAL_VAL     shift, and go to state 9
    STR_VAL      shift, and go to state 10
    ID           shift, and go to state 11
    BREAK        shift, and go to state 12
    CLASS        shift, and go to state 13
    CONST_RW     shift, and go to state 14
    CONTINUE     shift, and go to state 15
    DO           shift, and go to state 16
    FALSE_RW     shift, and go to state 17
    FOR          shift, and go to state 18
    FUNCTION     shift, and go to state 19
    IF           shift, and go to state 20
    LET          shift, and go to state 21
    NEW          shift, and go to state 22
    NULL_RW      shift, and go to state 23
    RETURN       shift, and go to state 24
    TRUE_RW      shift, and go to state 25
    VAR          shift, and go to state 26
    WHILE        shift, and go to state 27
    UNDEFINED    shift, and go to state 28

    $default  reduce using rule 2 (line)

    line             go to state 29
    stmt-list        go to state 30
    stmt             go to state 31
    assign-expr      go to state 32
    for-stmt         go to state 33
    do-while-stmt    go to state 34
    while-stmt       go to state 35
    if-stmt          go to state 36
    logic-expr       go to state 37
    class-def        go to state 38
    func-def         go to state 39
    var-declr        go to state 40
    expr             go to state 41
    idx-unsafe-expr  go to state 42
    idx-safe-expr    go to state 43
    vet-idx          go to state 44
    unary-expr       go to state 45
    arit-expr        go to state 46
    bitw-expr        go to state 47
    shift-expr       go to state 48
    var-att          go to state 49
    var-met          go to state 50
    var-obj          go to state 51
    var-val          go to state 52
    array-expr       go to state 53


State 1

  147 unary-expr: INCREMENT . ID
  148           | INCREMENT . var-att

    ID  shift, and go to state 54

    var-att  go to state 55
    var-met  go to state 50


State 2

  192 var-val: SUB . INT_VAL
  193        | SUB . REAL_VAL
  194        | SUB . STR_VAL
  195        | SUB . TRUE_RW
  196        | SUB . FALSE_RW

    INT_VAL   shift, and go to state 56
    REAL_VAL  shift, and go to state 57
    STR_VAL   shift, and go to state 58
    FALSE_RW  shift, and go to state 59
    TRUE_RW   shift, and go to state 60


State 3

  149 unary-expr: DECREMENT . ID
  150           | DECREMENT . var-att

    ID  shift, and go to state 61

    var-att  go to state 62
    var-met  go to state 50


State 4

  156 unary-expr: BITWISE_NOT . expr

    INCREMENT    shift, and go to state 1
    SUB          shift, and go to state 2
    DECREMENT    shift, and go to state 3
    BITWISE_NOT  shift, and go to state 4
    LOGICAL_NOT  shift, and go to state 5
    LPAR         shift, and go to state 6
    LBRACKET     shift, and go to state 7
    INT_VAL      shift, and go to state 8
    REAL_VAL     shift, and go to state 9
    STR_VAL      shift, and go to state 10
    ID           shift, and go to state 63
    FALSE_RW     shift, and go to state 17
    NEW          shift, and go to state 22
    NULL_RW      shift, and go to state 23
    TRUE_RW      shift, and go to state 25
    UNDEFINED    shift, and go to state 28

    logic-expr       go to state 37
    expr             go to state 64
    idx-unsafe-expr  go to state 42
    idx-safe-expr    go to state 43
    vet-idx          go to state 65
    unary-expr       go to state 45
    arit-expr        go to state 46
    bitw-expr        go to state 47
    shift-expr       go to state 48
    var-att          go to state 66
    var-met          go to state 50
    var-obj          go to state 51
    var-val          go to state 52
    array-expr       go to state 53


State 5

  155 unary-expr: LOGICAL_NOT . expr

    INCREMENT    shift, and go to state 1
    SUB          shift, and go to state 2
    DECREMENT    shift, and go to state 3
    BITWISE_NOT  shift, and go to state 4
    LOGICAL_NOT  shift, and go to state 5
    LPAR         shift, and go to state 6
    LBRACKET     shift, and go to state 7
    INT_VAL      shift, and go to state 8
    REAL_VAL     shift, and go to state 9
    STR_VAL      shift, and go to state 10
    ID           shift, and go to state 63
    FALSE_RW     shift, and go to state 17
    NEW          shift, and go to state 22
    NULL_RW      shift, and go to state 23
    TRUE_RW      shift, and go to state 25
    UNDEFINED    shift, and go to state 28

    logic-expr       go to state 37
    expr             go to state 67
    idx-unsafe-expr  go to state 42
    idx-safe-expr    go to state 43
    vet-idx          go to state 65
    unary-expr       go to state 45
    arit-expr        go to state 46
    bitw-expr        go to state 47
    shift-expr       go to state 48
    var-att          go to state 66
    var-met          go to state 50
    var-obj          go to state 51
    var-val          go to state 52
    array-expr       go to state 53


State 6

  134 expr: LPAR . expr RPAR

    INCREMENT    shift, and go to state 1
    SUB          shift, and go to state 2
    DECREMENT    shift, and go to state 3
    BITWISE_NOT  shift, and go to state 4
    LOGICAL_NOT  shift, and go to state 5
    LPAR         shift, and go to state 6
    LBRACKET     shift, and go to state 7
    INT_VAL      shift, and go to state 8
    REAL_VAL     shift, and go to state 9
    STR_VAL      shift, and go to state 10
    ID           shift, and go to state 63
    FALSE_RW     shift, and go to state 17
    NEW          shift, and go to state 22
    NULL_RW      shift, and go to state 23
    TRUE_RW      shift, and go to state 25
    UNDEFINED    shift, and go to state 28

    logic-expr       go to state 37
    expr             go to state 68
    idx-unsafe-expr  go to state 42
    idx-safe-expr    go to state 43
    vet-idx          go to state 65
    unary-expr       go to state 45
    arit-expr        go to state 46
    bitw-expr        go to state 47
    shift-expr       go to state 48
    var-att          go to state 66
    var-met          go to state 50
    var-obj          go to state 51
    var-val          go to state 52
    array-expr       go to state 53


State 7

  199 array-expr: LBRACKET . elmts-list RBRACKET

    COMMA      shift, and go to state 69
    SUB        shift, and go to state 2
    INT_VAL    shift, and go to state 8
    REAL_VAL   shift, and go to state 9
    STR_VAL    shift, and go to state 10
    FALSE_RW   shift, and go to state 17
    NULL_RW    shift, and go to state 23
    TRUE_RW    shift, and go to state 25
    UNDEFINED  shift, and go to state 28

    $default  reduce using rule 203 (elmts-list)

    var-val     go to state 70
    elmts-list  go to state 71


State 8

  187 var-val: INT_VAL .

    $default  reduce using rule 187 (var-val)


State 9

  188 var-val: REAL_VAL .

    $default  reduce using rule 188 (var-val)


State 10

  189 var-val: STR_VAL .

    $default  reduce using rule 189 (var-val)


State 11

   19 assign-expr: ID . assignment expr
   70 logic-expr: ID . LT expr
  145 idx-safe-expr: ID .
  146 vet-idx: ID . LBRACKET idx-safe-expr RBRACKET
  151 unary-expr: ID . INCREMENT
  153           | ID . DECREMENT
  169 var-att: ID . DOT var-att
  171        | ID . DOT var-met
  175        | ID . DOT ID
  176 var-met: ID . LPAR args-list RPAR
  183 var-obj: ID . LPAR args-list RPAR
  184        | ID . LT var-type GT LPAR args-list RPAR

    ASSIGN                  shift, and go to state 72
    DOT                     shift, and go to state 73
    INCREMENT               shift, and go to state 74
    PLUS_ASSIGN             shift, and go to state 75
    DECREMENT               shift, and go to state 76
    SUB_ASSIGN              shift, and go to state 77
    MULT_ASSIGN             shift, and go to state 78
    DIV_ASSIGN              shift, and go to state 79
    EXP_ASSIGN              shift, and go to state 80
    REM_ASSIGN              shift, and go to state 81
    BITWISE_AND_ASSIGN      shift, and go to state 82
    BITWISE_OR_ASSIGN       shift, and go to state 83
    BITWISE_XOR_ASSIGN      shift, and go to state 84
    LOGICAL_NULL_ASSIGN     shift, and go to state 85
    LOGICAL_AND_ASSIGN      shift, and go to state 86
    LOGICAL_OR_ASSIGN       shift, and go to state 87
    LT                      shift, and go to state 88
    LSHIFT_ASSIGN           shift, and go to state 89
    RSHIFT_ASSIGN           shift, and go to state 90
    RSHIFT_UNSIGNED_ASSIGN  shift, and go to state 91
    LPAR                    shift, and go to state 92
    LBRACKET                shift, and go to state 93

    $default  reduce using rule 145 (idx-safe-expr)

    assignment  go to state 94


State 12

   16 stmt: BREAK . SEMI

    SEMI  shift, and go to state 95


State 13

   77 class-def: CLASS . ID LBRACE class-att-list RBRACE

    ID  shift, and go to state 96


State 14

  113 var-declr: CONST_RW . id-list ASSIGN expr
  114          | CONST_RW . ID COLON var-type ASSIGN expr
  115          | CONST_RW . ID COLON var-type LBRACKET RBRACKET ASSIGN expr
  116          | CONST_RW . id-list ASSIGN obj-def

    ID  shift, and go to state 97

    id-list  go to state 98


State 15

   17 stmt: CONTINUE . SEMI

    SEMI  shift, and go to state 99


State 16

   55 do-while-stmt: DO . LBRACE line RBRACE WHILE LPAR expr RPAR
   56              | DO . LBRACE line RBRACE WHILE LPAR assign-expr RPAR

    LBRACE  shift, and go to state 100


State 17

  191 var-val: FALSE_RW .

    $default  reduce using rule 191 (var-val)


State 18

   21 for-stmt: FOR . LPAR assign-expr SEMI expr SEMI expr RPAR LBRACE line RBRACE
   22         | FOR . LPAR assign-expr SEMI expr SEMI assign-expr RPAR LBRACE line RBRACE
   23         | FOR . LPAR assign-expr SEMI expr SEMI RPAR LBRACE line RBRACE
   24         | FOR . LPAR assign-expr SEMI SEMI expr RPAR LBRACE line RBRACE
   25         | FOR . LPAR assign-expr SEMI SEMI assign-expr RPAR LBRACE line RBRACE
   26         | FOR . LPAR assign-expr SEMI SEMI RPAR LBRACE line RBRACE
   27         | FOR . LPAR var-declr SEMI expr SEMI expr RPAR LBRACE line RBRACE
   28         | FOR . LPAR var-declr SEMI expr SEMI assign-expr RPAR LBRACE line RBRACE
   29         | FOR . LPAR var-declr SEMI expr SEMI RPAR LBRACE line RBRACE
   30         | FOR . LPAR var-declr SEMI SEMI expr RPAR LBRACE line RBRACE
   31         | FOR . LPAR var-declr SEMI SEMI assign-expr RPAR LBRACE line RBRACE
   32         | FOR . LPAR var-declr SEMI SEMI RPAR LBRACE line RBRACE
   33         | FOR . LPAR SEMI expr SEMI expr RPAR LBRACE line RBRACE
   34         | FOR . LPAR SEMI expr SEMI assign-expr RPAR LBRACE line RBRACE
   35         | FOR . LPAR SEMI expr SEMI RPAR LBRACE line RBRACE
   36         | FOR . LPAR SEMI SEMI expr RPAR LBRACE line RBRACE
   37         | FOR . LPAR SEMI SEMI assign-expr RPAR LBRACE line RBRACE
   38         | FOR . LPAR SEMI SEMI RPAR LBRACE line RBRACE

    LPAR  shift, and go to state 101


State 19

   89 func-def: FUNCTION . ID LPAR params RPAR LBRACE line RBRACE
   90         | FUNCTION . ID LPAR params RPAR COLON var-type LBRACE line RBRACE

    ID  shift, and go to state 102


State 20

   59 if-stmt: IF . LPAR expr RPAR LBRACE line RBRACE
   60        | IF . LPAR expr RPAR LBRACE line RBRACE ELSE LBRACE line RBRACE
   61        | IF . LPAR expr RPAR LBRACE line RBRACE ELSE stmt
   62        | IF . LPAR assign-expr RPAR LBRACE line RBRACE
   63        | IF . LPAR assign-expr RPAR LBRACE line RBRACE ELSE LBRACE line RBRACE
   64        | IF . LPAR assign-expr RPAR LBRACE line RBRACE ELSE stmt

    LPAR  shift, and go to state 103


State 21

   99 var-declr: LET . id-list
  100          | LET . id-list ASSIGN expr
  101          | LET . id-list ASSIGN obj-def
  102          | LET . ID COLON var-type
  103          | LET . ID COLON var-type ASSIGN expr
  104          | LET . ID COLON var-type LBRACKET RBRACKET
  105          | LET . ID COLON var-type LBRACKET RBRACKET ASSIGN expr

    ID  shift, and go to state 104

    id-list  go to state 105


State 22

  185 var-obj: NEW . ID LPAR args-list RPAR
  186        | NEW . ID LT var-type GT LPAR args-list RPAR

    ID  shift, and go to state 106


State 23

  197 var-val: NULL_RW .

    $default  reduce using rule 197 (var-val)


State 24

   14 stmt: RETURN . SEMI
   15     | RETURN . expr SEMI

    SEMI         shift, and go to state 107
    INCREMENT    shift, and go to state 1
    SUB          shift, and go to state 2
    DECREMENT    shift, and go to state 3
    BITWISE_NOT  shift, and go to state 4
    LOGICAL_NOT  shift, and go to state 5
    LPAR         shift, and go to state 6
    LBRACKET     shift, and go to state 7
    INT_VAL      shift, and go to state 8
    REAL_VAL     shift, and go to state 9
    STR_VAL      shift, and go to state 10
    ID           shift, and go to state 63
    FALSE_RW     shift, and go to state 17
    NEW          shift, and go to state 22
    NULL_RW      shift, and go to state 23
    TRUE_RW      shift, and go to state 25
    UNDEFINED    shift, and go to state 28

    logic-expr       go to state 37
    expr             go to state 108
    idx-unsafe-expr  go to state 42
    idx-safe-expr    go to state 43
    vet-idx          go to state 65
    unary-expr       go to state 45
    arit-expr        go to state 46
    bitw-expr        go to state 47
    shift-expr       go to state 48
    var-att          go to state 66
    var-met          go to state 50
    var-obj          go to state 51
    var-val          go to state 52
    array-expr       go to state 53


State 25

  190 var-val: TRUE_RW .

    $default  reduce using rule 190 (var-val)


State 26

  106 var-declr: VAR . id-list
  107          | VAR . id-list ASSIGN expr
  108          | VAR . id-list ASSIGN obj-def
  109          | VAR . ID COLON var-type
  110          | VAR . ID COLON var-type ASSIGN expr
  111          | VAR . ID COLON var-type LBRACKET RBRACKET
  112          | VAR . ID COLON var-type LBRACKET RBRACKET ASSIGN expr

    ID  shift, and go to state 109

    id-list  go to state 110


State 27

   57 while-stmt: WHILE . LPAR expr RPAR LBRACE line RBRACE
   58           | WHILE . LPAR assign-expr RPAR LBRACE line RBRACE

    LPAR  shift, and go to state 111


State 28

  198 var-val: UNDEFINED .

    $default  reduce using rule 198 (var-val)


State 29

    0 $accept: line . $end

    $end  shift, and go to state 112


State 30

    1 line: stmt-list .
    3 stmt-list: stmt-list . stmt

    INCREMENT    shift, and go to state 1
    SUB          shift, and go to state 2
    DECREMENT    shift, and go to state 3
    BITWISE_NOT  shift, and go to state 4
    LOGICAL_NOT  shift, and go to state 5
    LPAR         shift, and go to state 6
    LBRACKET     shift, and go to state 7
    INT_VAL      shift, and go to state 8
    REAL_VAL     shift, and go to state 9
    STR_VAL      shift, and go to state 10
    ID           shift, and go to state 11
    BREAK        shift, and go to state 12
    CLASS        shift, and go to state 13
    CONST_RW     shift, and go to state 14
    CONTINUE     shift, and go to state 15
    DO           shift, and go to state 16
    FALSE_RW     shift, and go to state 17
    FOR          shift, and go to state 18
    FUNCTION     shift, and go to state 19
    IF           shift, and go to state 20
    LET          shift, and go to state 21
    NEW          shift, and go to state 22
    NULL_RW      shift, and go to state 23
    RETURN       shift, and go to state 24
    TRUE_RW      shift, and go to state 25
    VAR          shift, and go to state 26
    WHILE        shift, and go to state 27
    UNDEFINED    shift, and go to state 28

    $default  reduce using rule 1 (line)
